# Dolphin-Recompiler-Prototype-

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Elf.h  Instruction.cpp  Instructions.cpp  Instructions.h  Makefile  README.md  build.ninja  c_backend.cpp  c_backend.h  cfg.cpp  cfg.h  cmake_install.cmake  disasm.cpp  dol.cpp  dol.h  elf.cpp  main.cpp  ppc_state.h  runtime.c
